--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.348.0",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
     "multer": "^1.4.5-lts.1",
